src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_1.snap
---
source: src/parser/test.rs
description: add(
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Err(
            Err(UnexpectedEof("SyntaxError: Unexpected eof."), (0,3)->(0,4)),
        ),
    },
]

===================================

add(
   ^ [Error] SyntaxError: Unexpected eof.
